게시글작성페이지수정
window.onload - 페이지가 로딩되는 시점에 단 한 번만 실행되는 코드

rederInfo - 게시글 상세정보를 화면에 렌더링 하는 역할을 하는 함수

--- a/Board/src/main/resources/templates/post/write.html
+++ b/Board/src/main/resources/templates/post/write.html
@@ -58,11 +58,32 @@
 
     <th:block layout:fragment="script">
         <script th:inline="javascript">
+
         /*<![CDATA[*/
 
             window.onload = () => {
-                initCreatedDate();
+                renderPostInfo();
             }
+
+                // 게시글 상세정보 렌더링
+    function renderPostInfo() {
+        const post = [[ ${post} ]];
+
+        if ( !post ) {
+            initCreatedDate();
+            return false;
+        }
+
+        const form = document.getElementById('saveForm');
+        const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
+        form.isNotice.checked = post.noticeYn;
+        form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
+
+        fields.forEach(field => {
+            form[field].value = post[field];
+        })
+    }
+
 
 
             // 등록일 초기화
@@ -88,6 +109,8 @@
             }
 
         /*]]>*/
+
+
         </script>
     </th:block>
 </html>
