--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -43,7 +43,7 @@
                 </table>
                 <p class="btn_set">
                     <a th:href="@{/post/write.do( id=${post.id} )}" class="btns btn_bdr4 btn_mid">수정</a>
-                    <button type="button" class="btns btn_bdr1 btn_mid">삭제</button>
+                    <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>
                     <a th:href="@{/post/list.do}" class="btns btn_bdr3 btn_mid">뒤로</a>
                 </p>
             </section>
