--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -42,17 +42,21 @@
                     </tbody>
                 </table>
                 <p class="btn_set">
-                    <a th:href="@{/post/write.do( id=${post.id} )}" class="btns btn_bdr4 btn_mid">수정</a>
+                    <button type="button" onclick="goWritePage();" class="btns btn_bdr4 btn_mid">수정</button>
                     <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>
-                    <a th:href="@{/post/list.do}" class="btns btn_bdr3 btn_mid">뒤로</a>
-                </p>
-            </section>
+                    <button type="button" onclick="goListPage();" class="btns btn_bdr3 btn_mid">뒤로</button>
+                </p>            </section>
         </div> <!--/* .content */-->
     </th:block>
 
     <th:block layout:fragment="script">
         <script th:inline="javascript">
         /*<![CDATA[*/
+
+            // 게시글 수정 페이지로 이동
+    function goWritePage() {
+        location.href = '/post/write.do' + location.search;
+    }
 
             // 게시글 삭제
             function deletePost() {
