--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -58,24 +58,39 @@
         location.href = '/post/write.do' + location.search;
     }
 
-            // 게시글 삭제
-            function deletePost() {
-                const id = [[ ${post.id} ]];
+                // 게시글 리스트 페이지로 이동
+    function goListPage() {
+        const queryString = new URLSearchParams(location.search);
+        queryString.delete('id');
+        location.href = '/post/list.do' + '?' + queryString.toString();
+    }
 
-                if ( !confirm(id + '번 게시글을 삭제할까요?') ) {
-                    return false;
-                }
+               // 게시글 삭제
+    function deletePost() {
 
-                const formHtml = `
-                    <form id="deleteForm" action="/post/delete.do" method="post">
-                        <input type="hidden" id="id" name="id" value="${id}" />
-                    </form>
-                `;
-                const doc = new DOMParser().parseFromString(formHtml, 'text/html');
-                const form = doc.body.firstChild;
-                document.body.append(form);
-                document.getElementById('deleteForm').submit();
-            }
+        const id = [[ ${post.id} ]];
+
+        if ( !confirm(id + '번 게시글을 삭제할까요?') ) {
+            return false;
+        }
+
+        let inputHtml = '';
+
+        new URLSearchParams(location.search).forEach((value, key) => {
+            inputHtml += `<input type="hidden" name="${key}" value="${value}" />`;
+        })
+
+        const formHtml = `
+            <form id="deleteForm" action="/post/delete.do" method="post">
+                ${inputHtml}
+            </form>
+        `;
+
+        const doc = new DOMParser().parseFromString(formHtml, 'text/html');
+        const form = doc.body.firstChild;
+        document.body.append(form);
+        document.getElementById('deleteForm').submit();
+    }
 
         /*]]>*/
 
