레이어 팝업 html추가

--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -62,6 +62,32 @@
 
                 </div>
 
+                <!--/* 댓글 수정 popup */-->
+                <div id="commentUpdatePopup" class="popLayer">
+                    <h3>댓글 수정</h3>
+                    <div class="pop_container">
+                        <table class="tb tb_row tl">
+                            <colgroup>
+                                <col style="width:30%;" /><col style="width:70%;" />
+                            </colgroup>
+                            <tbody>
+                            <tr>
+                                <th scope="row">작성자<span class="es">필수 입력</span></th>
+                                <td><input type="text" id="modalWriter" name="modalWriter" placeholder="작성자를 입력해 주세요." /></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">내용<span class="es">필수 입력</span></th>
+                                <td><textarea id="modalContent" name="modalContent" cols="90" rows="10" placeholder="수정할 내용을 입력해 주세요."></textarea></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <p class="btn_set">
+                            <button type="button" id="commentUpdateBtn" class="btns btn_st2">수정</button>
+                            <button type="button" class="btns btn_bdr2" onclick="closeCommentUpdatePopup();">취소</button>
+                        </p>
+                    </div>
+                    <button type="button" class="btn_close" onclick="closeCommentUpdatePopup();"><span><i class="far fa-times-circle"></i></span></button>
+                </div>
             </section>
         </div> <!--/* .content */-->
     </th:block>
