--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -161,10 +161,10 @@
                                 <span class="date">${dayjs(row.createdDate).format('YYYY-MM-DD HH:mm')}</span>
                             </p>
                             <div class="cont"><div class="txt_con">${row.content}</div></div>
-                            <p class="func_btns">
-                                <button type="button" class="btns"><span class="icons icon_modify">수정</span></button>
-                                <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
-                            </p>
+                                <p class="func_btns">
+                                      <button type="button" onclick="openCommentUpdatePopup(${row.id});" class="btns"><span class="icons icon_modify">수정</span></button>
+                                      <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
+                                </p>
                         </div>
                     `;
                 })
