--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -99,6 +99,39 @@
     window.onload = () => {
         findAllComment();
     }
+        // 댓글 수정
+    function updateComment(id) {
+
+        const writer = document.getElementById('modalWriter');
+        const content = document.getElementById('modalContent');
+        isValid(writer, '작성자');
+        isValid(content, '수정할 내용');
+
+        const postId = [[ ${post.id} ]];
+        const params = {
+            id : id,
+            postId : postId,
+            content : content.value,
+            writer : writer.value
+        }
+
+        $.ajax({
+            url : `/posts/${postId}/comments/${id}`,
+            type : 'patch',
+            contentType : 'application/json; charset=utf-8',
+            dataType : 'json',
+            data : JSON.stringify(params),
+            async : false,
+            success : function (response) {
+                alert('수정되었습니다.');
+                closeCommentUpdatePopup();
+                findAllComment();
+            },
+            error : function (request, status, error) {
+                console.log(error)
+            }
+        })
+    }
 
         // 댓글 수정 팝업 open
     function openCommentUpdatePopup(id) {
