--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -123,7 +123,7 @@
         })
     }
     }
-        // 댓글 수정
+            // 댓글 수정
     function updateComment(id) {
 
         const writer = document.getElementById('modalWriter');
@@ -132,6 +132,7 @@
         isValid(content, '수정할 내용');
 
         const postId = [[ ${post.id} ]];
+        const uri = `/posts/${postId}/comments/${id}`;
         const params = {
             id : id,
             postId : postId,
@@ -139,24 +140,11 @@
             writer : writer.value
         }
 
-        $.ajax({
-            url : `/posts/${postId}/comments/${id}`,
-            type : 'patch',
-            contentType : 'application/json; charset=utf-8',
-            dataType : 'json',
-            data : JSON.stringify(params),
-            async : false,
-            success : function (response) {
-                alert('수정되었습니다.');
-                closeCommentUpdatePopup();
-                findAllComment();
-            },
-            error : function (request, status, error) {
-                console.log(error)
-            }
-        })
+        callApi(uri, 'patch', params);
+        alert('수정되었습니다.');
+        closeCommentUpdatePopup();
+        findAllComment();
     }
-
         // 댓글 수정 팝업 open
     function openCommentUpdatePopup(id) {
 
