--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -61,6 +61,10 @@
                 <div class="cm_list">
 
                 </div>
+                <div class="paging">
+
+                </div>
+
 
                 <!--/* 댓글 수정 popup */-->
                 <div id="commentUpdatePopup" class="popLayer">
@@ -134,28 +138,17 @@
         closeCommentUpdatePopup();
         findAllComment();
     }
-        // 댓글 수정 팝업 open
+           // 댓글 수정 팝업 open
     function openCommentUpdatePopup(id) {
 
         const postId = [[ ${post.id} ]];
-
-        $.ajax({
-            url : `/posts/${postId}/comments/${id}`,
-            type : 'get',
-            dataType : 'json',
-            async : false,
-            success : function (response) {
-                document.getElementById('modalWriter').value = response.writer;
-                document.getElementById('modalContent').value = response.content;
-                document.getElementById('commentUpdateBtn').setAttribute('onclick', `updateComment(${id})`);
-                layerPop('commentUpdatePopup');
-            },
-            error : function (request, status, error) {
-                console.log(error)
-            }
-        })
+        const uri = `/posts/${postId}/comments/${id}`;
+        const response = getJson(uri);
+        document.getElementById('modalWriter').value = response.writer;
+        document.getElementById('modalContent').value = response.content;
+        document.getElementById('commentUpdateBtn').setAttribute('onclick', `updateComment(${id})`);
+        layerPop('commentUpdatePopup');
     }
-
 
     // 댓글 수정 팝업 close
     function closeCommentUpdatePopup() {
