--- a/Board/src/main/resources/templates/post/write.html
+++ b/Board/src/main/resources/templates/post/write.html
@@ -59,31 +59,31 @@
     <th:block layout:fragment="script">
         <script th:inline="javascript">
 
-        /*<![CDATA[*/
+      /*<![CDATA[*/
 
             window.onload = () => {
                 renderPostInfo();
             }
 
-                // 게시글 상세정보 렌더링
-    function renderPostInfo() {
-        const post = [[ ${post} ]];
 
-        if ( !post ) {
-            initCreatedDate();
-            return false;
-        }
+            // 게시글 상세정보 렌더링
+            function renderPostInfo() {
+                const post = [[ ${post} ]];
 
-        const form = document.getElementById('saveForm');
-        const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
-        form.isNotice.checked = post.noticeYn;
-        form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
+                if ( !post ) {
+                    initCreatedDate();
+                    return false;
+                }
 
-        fields.forEach(field => {
-            form[field].value = post[field];
-        })
-    }
+                const form = document.getElementById('saveForm');
+                const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
+                form.isNotice.checked = post.noticeYn;
+                form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
 
+                fields.forEach(field => {
+                    form[field].value = post[field];
+                })
+            }
 
 
             // 등록일 초기화
@@ -102,15 +102,29 @@
                     isValid(fields[i], fieldNames[i]);
                 }
 
+                new URLSearchParams(location.search).forEach((value, key) => {
+                    const input = document.createElement('input');
+                    input.type = 'hidden';
+                    input.name = key;
+                    input.value = value;
+                    form.append(input);
+                })
+
                 document.getElementById('saveBtn').disabled = true;
                 form.noticeYn.value = form.isNotice.checked;
                 form.action = [[ ${post == null} ]] ? '/post/save.do' : '/post/update.do';
                 form.submit();
             }
 
+
+            // 게시글 리스트 페이지로 이동
+            function goListPage() {
+                const queryString = new URLSearchParams(location.search);
+                queryString.delete('id');
+                location.href = '/post/list.do' + '?' + queryString.toString();
+            }
+
         /*]]>*/
-
-
         </script>
     </th:block>
 </html>
