첨부파일조회용함수선언호출

--- a/Board/src/main/resources/templates/post/write.html
+++ b/Board/src/main/resources/templates/post/write.html
@@ -79,9 +79,45 @@
 
       /*<![CDATA[*/
 
-            window.onload = () => {
-                renderPostInfo();
-            }
+    window.onload = () => {
+        renderPostInfo();
+
+        findAllFile();
+    }
+
+
+    // 전체 파일 조회
+    function findAllFile() {
+
+        // 1. 신규 등록/수정 체크
+        const post = [[ ${post}]];
+        if ( !post ) {
+            return false;
+        }
+
+        // 2. API 호출
+        const response = getJson(`/posts/${post.id}/files`);
+
+        // 3. 로직 종료
+        if ( !response.length ) {
+            return false;
+        }
+
+        // 4. 업로드 영역 추가
+        for (let i = 0, len = (response.length - 1); i < len; i++) {
+            addFile();
+        }
+
+        // 5. 파일 선택 & 삭제 이벤트 재선언 & 파일명 세팅
+        const filenameInputs = document.querySelectorAll('.file_list input[type="text"]');
+        filenameInputs.forEach((input, i) => {
+            const fileInput = input.nextElementSibling.firstElementChild;
+            const fileRemoveBtn = input.parentElement.nextElementSibling;
+            fileInput.setAttribute('onchange', `selectFile(this, ${response[i].id})`);
+            fileRemoveBtn.setAttribute('onclick', `removeFile(this, ${response[i].id})`);
+            input.value = response[i].originalName;
+        })
+    }
                 // 파일 선택
     function selectFile(element) {
 
