폼에hidden파라미터선언

--- a/Board/src/main/resources/templates/post/write.html
+++ b/Board/src/main/resources/templates/post/write.html
@@ -18,13 +18,14 @@
 
                     <!--/* 서버로 전달할 공지글 여부 */-->
                     <input type="hidden" id="noticeYn" name="noticeYn" />
-                    <table class="tb tb_row">
+
+                    <!--/* 삭제 처리할 파일 번호 */-->
+                    <input type="hidden" id="removeFileIds" name="removeFileIds" />
                         <colgroup>
                             <col style="width:15%;" /><col style="width:35%;" /><col style="width:15%;" /><col style="width:35%;" />
                         </colgroup>
                         <tbody>
                             <tr>
-                                <th scope="row">공지글</th>
                                 <td><span class="chkbox"><input type="checkbox" id="isNotice" name="isNotice" class="chk" /><i></i><label for="isNotice"> 설정</label></span></td>
 
                                 <th scope="row">등록일</th>
