--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -127,16 +127,17 @@
             return false;
         }
 
-        // 3. 파일 영역 추가
+          // 3. 파일 영역 추가
         let fileHtml = '<div class="file_down"><div class="cont">';
         response.forEach(row => {
-            fileHtml += `<a href="javascript:alert('준비 중입니다.');"><span class="icons"><i class="fas fa-folder-open"></i></span>${row.originalName}</a>`;
+            fileHtml += `<a href="/posts/${postId}/files/${row.id}/download"><span class="icons"><i class="fas fa-folder-open"></i></span>${row.originalName}</a>`;
         })
         fileHtml += '</div></div>';
 
         // 4. 파일 HTML 렌더링
         document.getElementById('files').innerHTML = fileHtml;
     }
+
 
               // 전체 댓글 조회
     function findAllComment(page) {
