--- a/Board/src/main/resources/templates/post/view.html
+++ b/Board/src/main/resources/templates/post/view.html
@@ -225,7 +225,7 @@
                 const params = {
                     postId : postId,
                     content : content.value,
-                    writer : '홍길동'
+                    writer : 'user'
                 }
 
                 callApi(uri, 'post', params);
