--- a/Board/src/main/resources/templates/fragments/body.html
+++ b/Board/src/main/resources/templates/fragments/body.html
@@ -22,16 +22,7 @@
             <div class="lcontent">
                 <!--/* 메뉴 */-->
                 <nav>
-                    <ul>
-                        <li class="has_sub"><a href="javascript: void(0);" class="on"><span>게시판 관리</span></a>
-                            <ul>
-                                <li><a href="/post/list.do" class="on">리스트형</a></li>
-                                <li><a href="javascript: alert('준비 중입니다.');">갤러리형</a></li>
-                                <li><a href="javascript: alert('준비 중입니다.');">캘린더형</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="javascript: alert('준비 중입니다.');"><span>회원 관리</span></a></li>
-                    </ul>
+
                 </nav>
             </div>
 
@@ -43,7 +34,7 @@
 
             </div>
         </div> <!--/* // #container */-->
-        <footer>Copyright(c)네임즈.All rights reserved.</footer>
+        <footer></footer> //Copyright
     </div>
 
     <script th:src="@{/js/function.js}"></script>
