--- a/Board/src/main/resources/templates/fragments/body.html
+++ b/Board/src/main/resources/templates/fragments/body.html
@@ -22,6 +22,7 @@
             <div class="lcontent">
                 <!--/* 메뉴 */-->
                 <nav>
+                    <a href="/html/intro">HTML</a> |
 
                 </nav>
             </div>
