--- a/Board/src/main/resources/templates/fragments/body.html
+++ b/Board/src/main/resources/templates/fragments/body.html
@@ -17,14 +17,14 @@
         </header>
 
         <div id="container">
-            <div class="menu_toggle"><span></span></div>
             <!--/* 좌측 영역 */-->
             <div class="lcontent">
                 <!--/* 메뉴 */-->
-                <nav>
+
+              <!--  <nav>
                     <a href="/html/intro">HTML</a> |
 
-                </nav>
+                </nav> -->
             </div>
 
             <!--/* 우측 영역 */-->
